--- a/notebooks/CrankNicolson.ipynb
+++ b/notebooks/CrankNicolson.ipynb
@@ -140,7 +140,7 @@
     "    U[1] += r*(g0(t)+g0(t-k))\n",
     "    U[2] += r*(g1(t)+g1(t-k))\n",
     "    U = Al\\U\n",
-    "    if mod(i-1,tb) ≈ 0.0 # working with i*k makes it so our framerate doesn't change with k\n",
+    "    if mod(i-1,tb) ≈ 0.0\n",
     "        plot(x, U, xaxis = [0,1], yaxis = [-1,2],lw=3,label = @sprintf(\"u(x,t), t = %1.2f\",t))\n",
     "        plot!([0,1],[g0(t),g1(t)], label = \"BCs\", seriestype = :scatter)\n",
     "        frame(anim)\n",
