--- a/hw3/hw3.tex
+++ b/hw3/hw3.tex
@@ -93,7 +93,7 @@ neighborhood.
 
 \item Suppose $g(x)$ is differentiable and let $D_xg(x)$ be the $s\times s$
 Jacobian matrix.  Show that if the condition of part (a) holds then
-$\rho(D_x(\bar x)) < 1$, where $\rho(A)$ denotes the spectral radius of a
+$\rho(D_xg(\bar x)) < 1$, where $\rho(A)$ denotes the spectral radius of a
 matrix.
 
 \item Consider a predictor-corrector method (see Section 5.9.4) consisting
