--- a/midterm/midterm.tex
+++ b/midterm/midterm.tex
@@ -85,7 +85,7 @@ Now consider the time-dependent tridiagonal matrices:
   
 \mline
   
-\item One finite-dimensional approximation of \eqref{eq:toda_T} is to just take a finite section (a square subblock on the diagonal) of both $T$, $P$:
+\item One finite-dimensional approximation of \eqref{eq:toda_T} is to just take a finite section (a square subblock on the diagonal) of both $T$, $S$:
   \begin{align*}
     T_N(t) &= \begin{bmatrix}
       b_1(t) & a_1(t)\\
