Update labels for p and q

--- a/midterm/midterm.tex
+++ b/midterm/midterm.tex
@@ -29,7 +29,7 @@ Due May 15 on GitHub by 11pm} }
 \maketitle
 \centerline{Be sure to do a {\tt git pull} to update your local version of the {\tt amath-586-2020} repository.}
 
-This entire exam concerns system of ODEs called the \emph{Toda lattice}.  The system is defined using positions $p_j$, $j = 0, \pm 1, \pm 2,\ldots$ and momenta $q_j$, $j = 0, \pm 1, \pm 2, \ldots$:
+This entire exam concerns system of ODEs called the \emph{Toda lattice}.  The system is defined using momenta $p_j$, $j = 0, \pm 1, \pm 2,\ldots$ and positions $q_j$, $j = 0, \pm 1, \pm 2, \ldots$:
 \begin{align}\label{eq:toda}
   \begin{split}
   q_j'(t) &= p_j(t),\\
