--- a/midterm/midterm.tex
+++ b/midterm/midterm.tex
@@ -104,7 +104,7 @@ Now consider the time-dependent tridiagonal matrices:
   \end{align*}
   The finite section choice  can be understood by formally setting $q_0 = -\infty$ and $q_{N+1} = + \infty$ and then performing the change of variables \eqref{eq:toda_cov}.
   
-  With initial conditions $b_j(0) = 0$, $a_j(0) = 1/2, j = 1,2,\ldots,N$ and $N = 6$, use your favorite time-stepping method to solve
+  With initial conditions $b_j(0) = 0$, $j = 1,2,\ldots,N$, $a_j(0) = 1/2, j = 1,2,\ldots,N-1$ and $N = 6$, use your favorite time-stepping method to solve
   \begin{align*}
     T_N'(t) = S_N(t) T_N(t) - T_N(t)S_N(t),
   \end{align*}
