--- a/hw4/hw4.tex
+++ b/hw4/hw4.tex
@@ -120,7 +120,11 @@ U'(t) = \frac{1}{2h^2} B U(t), \quad B = \begin{bmatrix}
 
 \mline
   
-\item It can be shown that all the eigenvalues of $B$ are simple, real and non-positive.  Explain why this proves that the method \eqref{be} is Lax-Richtmyer stable.
+\item It can be shown that all the eigenvalues of $B$ are simple, real and non-positive. Do one of two things:
+  \begin{itemize}
+  \item Explain why this proves that the method \eqref{be} is Lax-Richtmyer stable if you are free to choose the norm.
+    \item Explain what additional condition you need if you fix the norm to be the 2-norm.
+  \end{itemize}
 
 \mline 
   
