--- a/notebooks/CrankNicolson.ipynb
+++ b/notebooks/CrankNicolson.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "Plots.AnimatedGif(\"/Users/thomastrogdon/Google Drive/Sync/Teaching/586/amath-586-2020/notebooks/heat_CN.gif\")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
     "    t += k\n",
     "    U = Ar*U\n",
     "    U[1] += r*(g0(t)+g0(t-k))\n",
-    "    U[2] += r*(g1(t)+g1(t-k))\n",
+    "    U[end] += r*(g1(t)+g1(t-k))\n",
     "    U = Al\\U\n",
     "    if mod(i-1,tb) ≈ 0.0\n",
     "        plot(x, U, xaxis = [0,1], yaxis = [-1,2],lw=3,label = @sprintf(\"u(x,t), t = %1.2f\",t))\n",
