--- a/final/Final Project.ipynb
+++ b/final/Final Project.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "4.  There are 6 extra credit points available if you want to make up some points or if you want to see how to extend your code and (hopefully) learn something new.  If you complete the second extra credit problem you'll see something truly remarkable.  That's in my opinion, of course.\n",
     "\n",
-    "5. This project is heavily adapted from one given out by Randy LeVeque in 2008."
+    "5. This project is adapted from one given out by Randy LeVeque in 2008."
    ]
   },
   {
@@ -103,10 +103,9 @@
     "\n",
     "2. If $v_0 = 0.29$ the the solution decays directly to the steady state $v = w = 0$.\n",
     "\n",
-    "Verify plot these two solutions. Numerically, verify that your method is second-order accurate at $t = 0.25$ when $v_0 = 0.29$.\n",
+    "Plot these two solutions. Numerically, verify that your method is second-order accurate at $t = 0.25$ when $v_0 = 0.29$.\n",
     "\n",
-    "\n",
-    "Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ and $I_a = 0.2$ until $t = 10$."
+    "Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$."
    ]
   },
   {
@@ -175,9 +174,12 @@
     "\n",
     "\\begin{align*}\n",
     "v_t(x,t) &= \\kappa v_{xx}(x,t)+  \\frac 1 \\epsilon \\left( g(v(x,t)) - w(x,t) + I_a \\right), \\quad g(v) = v (\\alpha - v) (1-v),\\\\\n",
-    "w_t(x,t) &= \\beta v(x,t) - \\gamma w(x,t).\\end{align*}\n",
+    "w_t(x,t) &= \\beta v(x,t) - \\gamma w(x,t),\\\\\n",
+    "v_x(a,t) &= 0,\\\\\n",
+    "v_x(b,t) & = 0.\n",
+    "\\end{align*}\n",
     "\n",
-    "Now let function `TRBDF2_heat(V)` apply one time step toward the solution of $v_t = \\kappa v_{xx}$ with time step `k/2`.\n",
+    "Now modify the function `TRBDF2_heat(V)` to apply one time step toward the solution of $v_t = \\kappa v_{xx}$ with time step `k/2`.\n",
     "\n",
     "Supposing that our previous code for `TRBDF2()` and `RK2()` is vectorized, Strang splitting becomes (with $I_a = 0$)\n",
     "\n",
