fixed defn of g(v)

--- a/final/Final Project.ipynb
+++ b/final/Final Project.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "Consider the ODE:\n",
     "\n",
-    "\\begin{align} v'(t) = \\frac 1 \\epsilon g(v(t)), \\quad g(v) = v (\\alpha - v) (1-v) - w. \\end{align}\n",
+    "\\begin{align} v'(t) = \\frac 1 \\epsilon g(v(t)), \\quad g(v) = v (\\alpha - v) (v-1) - w. \\end{align}\n",
     "\n",
     "Using the TR-BDF-2 method,\n",
     "\n",
@@ -57,7 +57,7 @@
     "\n",
     "The previous ODE becomes more interesting when it is coupled with another differential equation that evolves $w$:\n",
     "\n",
-    "\\begin{align*} v'(t) &= \\frac 1 \\epsilon \\left( g(v(t)) - w(t) + I_a \\right), \\quad g(v) = v (\\alpha - v) (1-v),\\\\\n",
+    "\\begin{align*} v'(t) &= \\frac 1 \\epsilon \\left( g(v(t)) - w(t) + I_a \\right), \\quad g(v) = v (\\alpha - v) (v-1),\\\\\n",
     "w'(t) &= \\beta v(t) - \\gamma w(t).\\end{align*}\n",
     "\n",
     "This is a simple model that exhibits many features of excitable media, and is a simplification of the famous Hodgkin-Huxley equations that are a better model for propagation in neuronal systems.  In this system $v(t)$ models the membrane potential while $w(t)$ models the concentration of an ion.\n",
@@ -173,7 +173,7 @@
     "The ODE system can be modified to allow for spatial variations: For $x \\in [a,b]$\n",
     "\n",
     "\\begin{align*}\n",
-    "v_t(x,t) &= \\kappa v_{xx}(x,t)+  \\frac 1 \\epsilon \\left( g(v(x,t)) - w(x,t) + I_a \\right), \\quad g(v) = v (\\alpha - v) (1-v),\\\\\n",
+    "v_t(x,t) &= \\kappa v_{xx}(x,t)+  \\frac 1 \\epsilon \\left( g(v(x,t)) - w(x,t) + I_a \\right), \\quad g(v) = v (\\alpha - v) (v-1),\\\\\n",
     "w_t(x,t) &= \\beta v(x,t) - \\gamma w(x,t),\\\\\n",
     "v_x(a,t) &= 0,\\\\\n",
     "v_x(b,t) & = 0.\n",
@@ -228,7 +228,7 @@
     "\n",
     "Consider the extension of the previous problem to two spatial dimensions: For $x \\in [a,b], ~y \\in [a,b]$:\n",
     "\\begin{align*}\n",
-    "v_t(x,y,t) &= \\kappa v_{xx}(x,y,t) + \\kappa v_{yy}(x,y,t)+  \\frac 1 \\epsilon \\left( g(v(x,y,t)) - w(x,y,t) + I_a \\right), \\quad g(v) = v (\\alpha - v) (1-v),\\\\\n",
+    "v_t(x,y,t) &= \\kappa v_{xx}(x,y,t) + \\kappa v_{yy}(x,y,t)+  \\frac 1 \\epsilon \\left( g(v(x,y,t)) - w(x,y,t) + I_a \\right), \\quad g(v) = v (\\alpha - v) (v-1),\\\\\n",
     "w_t(x,y,t) &= \\beta v(x,y,t) - \\gamma w(x,y,t).\n",
     "\\end{align*}\n",
     "\n",
@@ -278,6 +278,13 @@
     "\n",
     "But if at time $t = 0.9$ zero out all elements of $V$ with associated $y$ coordinates being larger than $6$, you break the symmetry in the $y$-direction.  Solve until $t = 6$.  You should see a spiral wave develop!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
