Added gamma for P2

--- a/final/Final Project.ipynb
+++ b/final/Final Project.ipynb
@@ -88,7 +88,7 @@
     "Using\n",
     "\n",
     "\\begin{align*}\n",
-    "\\alpha = 0.3, \\quad \\beta = 1, \\quad I_a = 0, \\quad \\epsilon = 0.001,\n",
+    "\\alpha = 0.3, \\quad \\beta = 1, \\quad \\gamma = 1, \\quad I_a = 0, \\quad \\epsilon = 0.001,\n",
     "\\end{align*}\n",
     "\n",
     "with initial data\n",
