Fixed pdf output

--- a/final/Final Project.ipynb
+++ b/final/Final Project.ipynb
@@ -99,13 +99,13 @@
     "\n",
     "the solution of the ODE system exhibits two distinct behaviors:\n",
     "\n",
-    "1. If $v_0 = 0.31$ then $v(t)$ rapdily rises near $v = 1$ and then decays to the stable steady state $v = w = 0$.\n",
+    "- If $v_0 = 0.31$ then $v(t)$ rapdily rises near $v = 1$ and then decays to the stable steady state $v = w = 0$.\n",
     "\n",
-    "2. If $v_0 = 0.29$ the the solution decays directly to the steady state $v = w = 0$.\n",
+    "- If $v_0 = 0.29$ the the solution decays directly to the steady state $v = w = 0$.\n",
     "\n",
     "Plot these two solutions. Numerically, verify that your method is second-order accurate at $t = 0.25$ when $v_0 = 0.29$.\n",
     "\n",
-    "Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$."
+    "- Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$."
    ]
   },
   {
