Wider margeins on pdf

--- a/final/Final Project.ipynb
+++ b/final/Final Project.ipynb
@@ -280,11 +280,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![SegmentLocal](FHN.png \"FHN\")"
+   ]
   }
  ],
  "metadata": {
