Keep the other parameters the same

--- a/final/Final Project.ipynb
+++ b/final/Final Project.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "Plot these two solutions. Numerically, verify that your method is second-order accurate at $t = 0.25$ when $v_0 = 0.29$.\n",
     "\n",
-    "- Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$."
+    "- Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$.  Keep the other parameters the same."
    ]
   },
   {
