--- a/final/Final Project.ipynb
+++ b/final/Final Project.ipynb
@@ -120,7 +120,7 @@
     "    v_t = \\kappa v_{xx}, \\quad t > 0,\\quad x \\in (a,b).\n",
     "\\end{align*}\n",
     "\n",
-    "We impose Neumann boundary conditions $v_x(0,t) = 0 = v_x(1,t)$.  Because the boundary conditions do not directly specify $v(0,t)$ and $v(1,t)$, we need to include their approximations in our vector of unkowns.  The MOL discretization can be written\n",
+    "We impose Neumann boundary conditions $v_x(a,t) = 0 = v_x(b,t)$.  Because the boundary conditions do not directly specify $v(a,t)$ and $v(b,t)$, we need to include their approximations in our vector of unkowns.  The MOL discretization can be written\n",
     "\n",
     "\\begin{align*}\n",
     "V'(t) = \\frac{\\kappa}{h^2} A V(t).\n",
